--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.fuel_queue_client'
+    namespace 'com.example.equeue_client'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.fuel_queue_client"
+        applicationId "com.example.equeue_client"
         minSdk 21
         targetSdk 32
         versionCode 1
